Simple filtering on request list

--- a/src/OcsLogExplorer.Web/css/dashboard.css
+++ b/src/OcsLogExplorer.Web/css/dashboard.css
@@ -140,10 +140,13 @@ body {
 
 .filterList {
     position: absolute;
-    height: 40px;
     right: 0;
-    top: -47px;
+    top: -2px;
     text-align: right;
+}
+
+.requestsContainer {
+  position: relative;
 }
 
 .filterListRow {
